--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   odoo:
     build:
@@ -52,11 +50,8 @@ services:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
       - AWS_BUCKETNAME
-    ports:
-      - "8069:8069" # Odoo default port
-    networks:
-      - internal
-    profiles: ["prod"]
+    #ports:
+    #  - "8069:8069" # Odoo default port
 
   postgres:
     build:
@@ -79,22 +74,16 @@ services:
       - PGADMING_DB_NAME
       - PGADMING_DB_USER
       - PGADMIN_DB_PASSWORD
-    ports:
-      - "5432:5432" # Postgres default port
-    networks:
-      - internal
-    profiles: ["prod"]
+    #ports:
+    #  - "5432:5432" # Postgres default port
 
   redis:
     image: eqalpha/keydb:${KEYDB_TAG}
     platform: linux/amd64
-    ports:
-      - "6379:6379" # Redis/KeyDB default port
+    #ports:
+    #  - "6379:6379" # Redis/KeyDB default port
     volumes:
       - redis-data:/data
-    networks:
-      - internal
-    profiles: ["prod"]
 
   s3:
     image: minio/minio:${MINIO_TAG}
@@ -105,12 +94,9 @@ services:
     command: server ${MINIO_DATA} --console-address ":${MINIO_CONSOLE_PORT}"
     volumes:
       - s3-data:/data
-    ports:
-      - "9000:9000" # MinIO API
-      - "9001:9001" # MinIO Console
-    networks:
-      - internal
-    profiles: ["prod"]
+    #ports:
+    #  - "9000:9000" # MinIO API
+    #  - "9001:9001" # MinIO Console
 
   pgadmin:
     build:
@@ -122,16 +108,13 @@ services:
       - postgres
     expose:
       - 80
-    ports:
-      - "5050:80" # Expose pgAdmin on port 5050
+    #ports:
+    #  - "5050:80" # Expose pgAdmin on port 5050
     volumes:
       - pgadmin-data:/var/lib/pgadmin
     environment:
       - PGADMIN_DEFAULT_EMAIL
       - PGADMIN_DEFAULT_PASSWORD
-    networks:
-      - internal
-    profiles: ["prod"]
 
 volumes:
   odoo-data:
@@ -139,7 +122,3 @@ volumes:
   redis-data:
   s3-data:
   pgadmin-data:
-
-networks:
-  internal:
-    driver: bridge
